2008-01-11 aurel
* include most of the column of the catalog in sql table