@@ -1,2 +1,5 @@
+2008-12-15 romain
+* Add Base_getWorklistTableColumnIDList
+
 2008-01-11 aurel
 * include most of the column of the catalog in sql table
